テスト変更2

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <article>
             <h2>チームでオススメのDocbase記事</h2>
             <h3<a href="">タイトル</a></h3>
-            <p>オススメの理由</p>
+            <p>テスト2</p>
         </article>
         </section>
 
