--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <section>
         <article>
-            <h2>チームでオススメのDocbase記事</h2>
+            <h2>テスト3</h2>
             <h3<a href="">テスト</a></h3>
             <p>テスト2</p>
         </article>
