--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul>
             <li>メンバー1</li>
             <li>メンバー2</li>
-            <li>メンバー3</li>
+            <li>豊福裕美子</li>
             <li>高橋 慶伍</li>
             <li>庄村 祐樹</li>
         </ul>
